# study-mcp-server

./: README.md  pyproject.toml
src/study_mcp_server/: __init__.py  app.py  server.py  server_old.py
src/study_mcp_server/client/: mcp_client.py  multi_mcp_manager.py  multi_mcp_manager_old.py
src/study_mcp_server/server/: mcp_server.py
